# CheckMyDevice

./: .gitignore  AGENTS.md  README.md  design-system-SKILL.md  design-system-reference.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
.agents/skills/design-system/: SKILL.md
.agents/skills/design-system/references/: design.md
artifacts/check-my-device/: index.html  package.json  vite.config.ts
artifacts/check-my-device/.replit-artifact/: artifact.toml
artifacts/check-my-device/public/: site.webmanifest
artifacts/check-my-device/src/: App.tsx  index.css
artifacts/check-my-device/src/components/: AppTopbar.tsx  CreatorCredit.tsx  DiagnosticPrimitives.tsx  Layout.tsx  TestPageHeader.tsx
artifacts/check-my-device/src/components/ui/: badge.tsx  button.tsx  card.tsx  progress.tsx  select.tsx
artifacts/check-my-device/src/context/: TestContext.tsx
artifacts/check-my-device/src/pages/: Dashboard.tsx  LandingPage.tsx  ResultsSummary.tsx
attached_assets/: Pasted--Redesign-Prompt-Paste-into-your-existing-Replit-Agent-_1783865281483.txt  Pasted--Replit-Build-Prompt-Copy-everything-below-into-Replit-_1783863283183.txt
output/Yuan_Andrei_C_Mariano_Data_MiniProject/: .gitignore  DESIGN.md  EMAIL_DRAFT.txt  README.md  config.ini  cron.example  logging.ini  pyproject.toml
output/Yuan_Andrei_C_Mariano_Data_MiniProject/sgx_downloader/: __init__.py  cli.py  client.py  config.py  manifest.py  models.py  service.py
output/Yuan_Andrei_C_Mariano_Data_MiniProject/tests/: test_downloader.py
scripts/: enforce-pnpm.cjs
(+10 files in other folders)
