[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sgx-data-downloader"
version = "1.0.0"
description = "Recoverable daily downloader for SGX derivatives tick and trade-cancellation data"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Yuan Andrei C. Mariano" }]
license = { text = "Submission project - private evaluation only" }
dependencies = []

[project.scripts]
sgx-download = "sgx_downloader.cli:main"

[tool.setuptools.packages.find]
include = ["sgx_downloader*"]

